[package]
name = "resurgence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_rapier3d = { version = "^0.23", features = ["debug-render-3d"]}
bevy-tnua-rapier3d = "0.1.0"
bevy_egui = "0.23"
bevy-tnua = "0.13.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
